--- a/src/visionlouisville/jstemplates/list-tpl.html
+++ b/src/visionlouisville/jstemplates/list-tpl.html
@@ -1,4 +1,7 @@
 <div class="container">
+  {{^if_authenticated}}
+    {{> welcome-tpl }}
+  {{/if_authenticated}}
 
   <ul class="vision-category-list unstyled-list is-current-{{ category }}">
       <li class="vision-category-economy">
@@ -34,7 +37,7 @@
   {{^}}
   <a href="{{ LOGIN_URL '/' }}visions/{{ category }}/new" class="btn btn-block btn-primary">Sign In and Add My Vision <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
   {{/if_authenticated}}
-  
+
   {{/ if }}
 
   <ul class="vision-list unstyled-list"></ul>
