--- a/src/visionlouisville/jstemplates/welcome-tpl.html
+++ b/src/visionlouisville/jstemplates/welcome-tpl.html
@@ -10,6 +10,6 @@
   {{#if_authenticated}}
   <a href="/visions/new" class="btn btn-block btn-primary">Add My Vision</a>
   {{^}}
-  <a href="{{ LOGIN_URL '' }}" class="btn btn-block btn-primary">Sign In and to become a Visionary <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
+  <a href="{{ LOGIN_URL '' }}" class="btn btn-block btn-primary">Sign in to become a Visionary <img src="{{ STATIC_URL }}images/nav-twitter.png" class="icon-inline"></a>
   {{/if_authenticated}}
 </div>
