tweak footer text

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -19,10 +19,10 @@
     <p>Have a great idea for the future of Louisville? Sign in with your Twitter account, and <a href="/visions/new"><strong>add it here!</strong></a> Explore visions from others, add comments and hearts to show your support.</p>
 
     <h5>Allies are listening.</h5>
-    <p>Led by Mayor Greg Fischer, <strong>allies</strong> are community leaders, city officials, mentors, and educators using #VizLou to hear ideas for the future of Louisville. They're engaging with visionary youth by reading and sharing visions, clicking to show support, and adding comments to help visions become better defined.
+    <p>Led by Mayor Greg Fischer, <strong>Allies</strong> are community leaders, city officials, mentors, and educators using #VizLou to hear ideas for the future of Louisville. They're engaging with visionary youth by reading and sharing visions, clicking to show support, and adding comments to help visions become better defined.
     </p>
 
-    <h5>Give us your feedback</h5>
+    <h5>Give us your feedback.</h5>
     <p>#VizLou is still in beta. Tweet your comments and suggestions to <a href="http://twitter.com/vizlou">@vizlou</a> or email <a href="mailto:hello@vizlou.org">hello@vizlou.org</a>.</p>
 
   </div>
