Explicitly specify the ally form action.
For browsers that use hashes (#) for urls, the form was POSTing to root (/) instead of to the appropriate route (/ally-signup).

--- a/src/visionlouisville/jstemplates/ally-signup-tpl.html
+++ b/src/visionlouisville/jstemplates/ally-signup-tpl.html
@@ -13,7 +13,7 @@
     <p>Enter your email address to finish becoming an ally.</p>
 
     {{# if_authenticated }}
-      <form method="POST">
+      <form method="POST" action="/ally-signup">
         <input type="hidden" name="csrfmiddlewaretoken" value="{{ CSRF_TOKEN }}">
 
         <p class="vision-title">
