Dynamically change title on route change
- Move text munging methods from handlebars_helpers into Utils
- Add titles for each route

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h5>What's Your vision for Louisville?</h5>
+  <h5>What's your vision for Louisville?</h5>
   <form>
 
     <input type="hidden" name="author" value="{{ author }}">
