--- a/src/visionlouisville/jstemplates/home-allies-tpl.html
+++ b/src/visionlouisville/jstemplates/home-allies-tpl.html
@@ -1,3 +1,3 @@
   <h5>We are the Allies, listening to you!</h5>
   <ul class="user-list allies-list unstyled-list clearfix"></ul>
-  <a href="/users/list" class="btn btn-block">See All Allies</a>
+  <a href="/users/list/allies" class="btn btn-block">See All Allies</a>
