--- a/src/visionlouisville/jstemplates/user-list-layout-tpl.html
+++ b/src/visionlouisville/jstemplates/user-list-layout-tpl.html
@@ -1,6 +1,10 @@
 <div class="container">
-  <a href="/users/list/visionaries">Visionaries</a>
-  <a href="/users/list/allies">Allies</a>
+  <nav class="tabs-container">
+    <ul class="tabs tabs-2 unstyled-list">
+      <li class="tab is-current"><a href="/users/list/visionaries">Visionaries</a></li>
+      <li class="tab"><a href="/users/list/allies">Allies</a></li>
+    </ul>
+  </nav>
 
   <div class="user-list-region"></div>
 </div>
