stub in user-card meta info

--- a/src/visionlouisville/jstemplates/user-list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/user-list-item-tpl.html
@@ -5,5 +5,12 @@
     <strong class="author-name">{{ full_name }}</strong>
     <a class="twitter-handle" href="http://twitter.com/{{ username }}" target="_blank">@{{ username }}</a>
   </span>
+  <span class="user-meta">
+    <span class="user-vision-count nobreak">42 Visions</span>
+    <span class="meta-sep">|</span>
+    <span class="user-support-count nobreak">42 Supports</span>
+    <span class="meta-sep">|</span>
+    <span class="user-reply-count nobreak">42 Replies</span>
+  </span>
 
 </article>
