Add replies to the user detail page - Rename regions to fix conflicts - Add reply with vision templates and views - Add collection type to the user model relationships - Remove reply from the user model relationships due to serialization issues (see comments)

--- a/src/visionlouisville/jstemplates/user-detail-tpl.html
+++ b/src/visionlouisville/jstemplates/user-detail-tpl.html
@@ -18,10 +18,13 @@
 
     <div class="activity clearfix">
       <h5>My Visions</h5>
-      <div class="visions-region"></div>
+      <div class="user-visions-region"></div>
 
       <h5>Visions I Support</h5>
-      <div class="supported-region"></div>
+      <div class="user-supported-region"></div>
+
+      <h5>My Replies</h5>
+      <div class="user-replies-region"></div>
     </div>
 
   </article>
