Hook up all of the user avatars as links to the user detail page - Close the user menu on route

--- a/src/visionlouisville/jstemplates/list-item-vision-tpl.html
+++ b/src/visionlouisville/jstemplates/list-item-vision-tpl.html
@@ -1,6 +1,6 @@
 <article class="vision clearfix">
 
-  <a href="/visions/{{ id }}" class="user-link"><img src="{{ author_details.avatar_url }}" class="avatar" /></a>
+  <a href="/users/{{ author_details.id }}" class="user-link"><img src="{{ author_details.avatar_url }}" class="avatar" /></a>
 
   <a href="/visions/{{ id }}" class="vision-link">
 
