--- a/src/visionlouisville/jstemplates/reply-item-tpl.html
+++ b/src/visionlouisville/jstemplates/reply-item-tpl.html
@@ -1,6 +1,6 @@
   <div class="reply clearfix">
 
-    <img src="{{ author_details.avatar_url }}" class="avatar">
+    <a href="/users/{{ author }}"><img src="{{ author_details.avatar_url }}" class="avatar"></a>
     <strong class="author-name">{{ author_details.full_name }}</strong>
     <em class="twitter-handle">@{{ author_details.username }}</em>
 
