--- a/src/visionlouisville/jstemplates/user-avatar-tpl.html
+++ b/src/visionlouisville/jstemplates/user-avatar-tpl.html
@@ -1,1 +1,1 @@
-<span class="pretend-a"><img class="avatar" src="{{ avatar_url }}" alt="{{ full_name }}" title="{{ full_name }}"></span>
+<a href="/users/{{ id }}"><img class="avatar" src="{{ avatar_url }}" alt="{{ full_name }}" title="{{ full_name }}"></a>
