--- a/src/visionlouisville/jstemplates/vision-carousel-item-tpl.html
+++ b/src/visionlouisville/jstemplates/vision-carousel-item-tpl.html
@@ -1,5 +1,5 @@
 <article class="vision">
-  <a href="/visions/{{ id }}" class="user-link"><img src="{{ author_details.avatar_url }}" class="avatar" /></a>
+  <a href="/users/{{ author }}" class="user-link"><img src="{{ author_details.avatar_url }}" class="avatar" /></a>
 
   <a href="/visions/{{ id }}" class="vision-link clearfix">
 
