Add file upload capability to vision form
- Add a bunch of image processing libraries
- Add a file input to the vision form
- Override VisionModel.sync to perform specially when media is provided

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -44,6 +44,10 @@
       <textarea name="text" placeholder="My vision for Louisville is..." required></textarea>
     </p>
 
+    <p class="vision-media">
+      <input type="file" name="media">
+    </p>
+
     <p class="vision-tweet">
       <label class="on-off-switch-label"><input type="checkbox" data-placement="header" name="x-send-to-twitter" class="on-off-switch is-visuallyhidden"><span class="on-off-switch-icon"><img src="/static/images/on-off-switch.png"></span> Tweet This Vision</label>
     </p>
