Add vision media to the vision item detail

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -26,6 +26,9 @@
     </header>
 
     <p class="vision-description">{{ formattext text }}</p>
+    {{# if media_url }}
+    <img src="{{ media_url }}" class="vision-media">
+    {{/ if }}
 
     <footer class="vision-footer clearfix">
       <a href="#" class="retweet-link{{#if_shared}} retweeted{{/if_shared}}"><span class="tweet-icon"><img class="tweet-icon-retweet" src="/static/images/retweet-icon.png"></span> Retweet</a>
