Add file type checking and preview the image before submit

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -45,7 +45,8 @@
     </p>
 
     <p class="vision-media">
-      <input type="file" name="media">
+      <input type="file" name="media" accept="image/*">
+      <img class="image-preview">
     </p>
 
     <p class="vision-tweet">
