Add images to the vision list

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -27,7 +27,7 @@
 
     <p class="vision-description">{{ formattext text }}</p>
     {{# if media_url }}
-    <img src="{{ media_url }}" class="vision-media">
+    <span class="vision-media"><img src="{{ media_url }}"></span>
     {{/ if }}
 
     <footer class="vision-footer clearfix">
