--- a/src/visionlouisville/jstemplates/user-detail-tpl.html
+++ b/src/visionlouisville/jstemplates/user-detail-tpl.html
@@ -1,31 +1,31 @@
 <div class="container">
-  <article class="user user-card clearfix">
 
-    <div class="user-summary clearfix">
-    <a href="/users/{{ id }}" class="user-link"><img class="avatar" src="{{ avatar_url }}" alt="{{ full_name }}" title="{{ full_name }}"></a>
-    <span  class="author">
-      <strong class="author-name">{{ full_name }}</strong>
-      <a class="twitter-handle" href="http://twitter.com/{{ username }}" target="_blank">@{{ username }}</a>
-    </span>
-    <span class="user-meta">
-      <span class="user-vision-count nobreak">{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</span>
-      <span class="meta-sep">|</span>
-      <span class="user-support-count nobreak">{{ supported.length}} {{pluralize supported.length 'Support' 'Supports'}}</span>
-      <span class="meta-sep">|</span>
-      <span class="user-reply-count nobreak">{{ replies.length }} {{pluralize replies.length 'Reply' 'Replies'}}</span>
-    </span>
-    </div>
+  <div class="bio clearfix">
+    <img class="avatar bio-avatar" src="{{ avatar_url }}" alt="{{ full_name }}" title="{{ full_name }}">
+    <h3 class="bio-name">{{ full_name }}</h3>
+    <a class="twitter-handle bio-twitter-handle" href="http://twitter.com/{{ username }}" target="_blank">@{{ username }}</a> on Twitter.com
+    <p class="bio-text">{{ bio }}</p>
+  </div>
 
-    <div class="activity clearfix">
-      <h5>My Visions</h5>
-      <div class="user-visions-region"></div>
+  <div class="activity clearfix">
 
-      <h5>Visions I Support</h5>
-      <div class="user-supported-region"></div>
+    <nav class="tabs-container">
+      <ul class="tabs tabs-3 unstyled-list">
+        <li class="tab is-current"><a href="#">{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</a></li>
+        <li class="tab"><a href="#">{{ supported.length}} {{pluralize supported.length 'Support' 'Supports'}}</a></li>
+        <li class="tab"><a href="#">{{ replies.length }} {{pluralize replies.length 'Reply' 'Replies'}}</a></li>
+      </ul>
+    </nav>
 
-      <h5>My Replies</h5>
-      <div class="user-replies-region"></div>
-    </div>
+    <h5>{{ first_name }}'s Visions</h5>
+    <div class="user-visions-region"></div>
 
-  </article>
+    <h5>Visions {{ first_name }} Supports</h5>
+    <div class="user-supported-region"></div>
+
+    <h5>{{ first_name }}'s Replies</h5>
+    <div class="user-replies-region"></div>
+
+  </div>
+
 </div>
