Add routes for the various tabs on the user detail page - Add urls to the tab hrefs - Add is-current class to the tab when selected via the route - Move content rendering from the controller to the view

--- a/src/visionlouisville/jstemplates/user-detail-tpl.html
+++ b/src/visionlouisville/jstemplates/user-detail-tpl.html
@@ -11,21 +11,12 @@
 
     <nav class="tabs-container">
       <ul class="tabs tabs-3 unstyled-list">
-        <li class="tab is-current"><a href="#">{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</a></li>
-        <li class="tab"><a href="#">{{ supported.length}} {{pluralize supported.length 'Support' 'Supports'}}</a></li>
-        <li class="tab"><a href="#">{{ replies.length }} {{pluralize replies.length 'Reply' 'Replies'}}</a></li>
+        <li class="tab"><a href="/users/{{id}}/visions">{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</a></li>
+        <li class="tab"><a href="/users/{{id}}/supported">{{ supported.length}} {{pluralize supported.length 'Support' 'Supports'}}</a></li>
+        <li class="tab"><a href="/users/{{id}}/replies">{{ replies.length }} {{pluralize replies.length 'Reply' 'Replies'}}</a></li>
       </ul>
     </nav>
 
-    <h5>{{ first_name }}'s Visions</h5>
-    <div class="user-visions-region"></div>
-
-    <h5>Visions {{ first_name }} Supports</h5>
-    <div class="user-supported-region"></div>
-
-    <h5>{{ first_name }}'s Replies</h5>
-    <div class="user-replies-region"></div>
-
+    <div class="content-region"></div>
   </div>
-
 </div>
