HTML format the bio text

--- a/src/visionlouisville/jstemplates/user-detail-tpl.html
+++ b/src/visionlouisville/jstemplates/user-detail-tpl.html
@@ -4,7 +4,7 @@
     <img class="avatar bio-avatar" src="{{ avatar_url }}" alt="{{ full_name }}" title="{{ full_name }}">
     <h3 class="bio-name">{{ full_name }}</h3>
     <a class="twitter-handle bio-twitter-handle" href="http://twitter.com/{{ username }}" target="_blank">@{{ username }}</a> on Twitter.com
-    <p class="bio-text">{{ bio }}</p>
+    <p class="bio-text">{{ formattext bio }}</p>
   </div>
 
   <div class="activity clearfix">
