--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -14,21 +14,21 @@
     <h5>What is #VizLou?</h5>
     <p><strong>#VizLou</strong> is a place to share what you love about Louisville, and your ideas to make it better.</p>
 
-    <p>Want to share something you love about Louisville? Tweet your inspirations with the hashtag <strong>#vizlou</strong> and see what visions they inspire from others.</p>
-
+    <h5>Become a Visionary.</h5>
     <p>Have a great idea for the future of Louisville? 
       {{#if_authenticated}}
       <a href="/visions/new"><strong>Add it here!</strong></a> 
       {{^}}
       <a href="{{ LOGIN_URL '/visions/new' }}"><strong>Sign in with your Twitter account</strong></a>
       to add it!
-      {{/if_authenticated}}
-      
-      Explore visions from others, add comments and hearts to show your support.</p>
+      {{/if_authenticated}}      
+      Explore visions from others, add comments and hearts to show your support.
+    </p>
+    <p>Want to share something you love about Louisville? Tweet with the hashtag <strong>#vizlou</strong> and see what visions you inspire from others.</p>
 
     <h5>Allies are listening.</h5>
-    <p>Led by Mayor Greg Fischer, <strong>Allies</strong> are community leaders, city officials, mentors, and educators using #VizLou to hear ideas for the future of Louisville. They're engaging with visionary youth by reading and sharing visions, clicking to show support, and adding comments to help visions become better defined.
-    </p>
+    <p>Led by Mayor Greg Fischer, <strong>Allies</strong> are community leaders using #VizLou to hear ideas for the future of Louisville. They're engaging with visionary youth by reading and sharing visions, clicking to show support, and adding comments to help visions become better defined.</p>
+    <p>Are you a community leader? City official? Educator? Pastor? Mentor? <a href="/ally-signup"><strong>Sign up to become an Ally!</strong></a></p>
 
     <h5>Give us your feedback.</h5>
     <p>#VizLou is still in beta. Tweet your comments and suggestions to <a href="http://twitter.com/vizlou">@vizlou</a> or email <a href="mailto:hello@vizlou.org">hello@vizlou.org</a>.</p>
