Hide the preview image and show when image is generated
- Explorer shows a placeholder image icon if the image is shown without a src

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -50,7 +50,7 @@
         <span class="media-btn"><img src="/static/images/media-button.png"></span> Add an Image
         <input id="my-media-upload" class="media-input" type="file" name="media" accept="image/*">
       </label>
-      <span class="image-preview-container"><img class="image-preview"></span>
+      <span class="image-preview-container"><img class="image-preview is-hidden"></span>
     </p>
     {{/ if_imagemanip_feature }}
 
