--- a/src/visionlouisville/jstemplates/user-list-tpl.html
+++ b/src/visionlouisville/jstemplates/user-list-tpl.html
@@ -1,8 +1,8 @@
 <div class="container">
   <nav class="tabs-container">
     <ul class="tabs tabs-2 unstyled-list">
-      <li class="tab {{^if show_allies}}is-current{{/if}}"><a href="/users/list/visionaries" class="uppercase">Visionaries</a></li>
-      <li class="tab {{#if show_allies}}is-current{{/if}}"><a href="/users/list/allies" class="uppercase">Allies</a></li>
+      <li class="tab {{^if show_allies}}is-current{{/if}}"><a href="/users/list/visionaries" class="uppercase" data-noscroll>Visionaries</a></li>
+      <li class="tab {{#if show_allies}}is-current{{/if}}"><a href="/users/list/allies" class="uppercase" data-noscroll>Allies</a></li>
     </ul>
   </nav>
 
