info text about vision louisville

--- a/src/visionlouisville/jstemplates/home-tpl.html
+++ b/src/visionlouisville/jstemplates/home-tpl.html
@@ -13,6 +13,7 @@
 
     <h5>What is #VizLou?</h5>
     <p><strong>#VizLou</strong> is a place to share what you love about Louisville, and your ideas to make it better.</p>
+    <p>All visions shared here will contribute to <a href="http://www.visionlouisville.com/">Vision Louisville</a>, a community process to shape the look, feel and flow of Louisville in the next 25 years. The Vision will help create a strategic framework of major goals and specific projects that will shape the built environment throughout the entire community.</p>
 
     <h5>Become a Visionary.</h5>
     <p>Have a great idea for the future of Louisville?
