Make ally question a little clearer

--- a/src/visionlouisville/jstemplates/home-allies-tpl.html
+++ b/src/visionlouisville/jstemplates/home-allies-tpl.html
@@ -2,5 +2,5 @@
   <ul class="user-list allies-list unstyled-list clearfix"></ul>
   <a href="/users/list/allies" class="btn btn-block">See All Allies</a>
   <p class="ally-invite">
-    A community leader, city official, or mentor? <strong><a href="/ally">Become an Ally!</a></strong>
+    Are you a community leader, city official, or mentor? <strong><a href="/ally">Become an Ally!</a></strong>
   </p>
