Put some space between the Add an Image and Tweet This Vision buttons

--- a/src/visionlouisville/jstemplates/form-tpl.html
+++ b/src/visionlouisville/jstemplates/form-tpl.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h5>What's your vision for Louisville?</h5>
-  <form>
+  <form class="vision-form">
 
     <input type="hidden" name="author" value="{{ author }}">
     <input type="hidden" name="inspiration" value="{{ inspiration }}">
