--- a/src/visionlouisville/jstemplates/user-detail-tpl.html
+++ b/src/visionlouisville/jstemplates/user-detail-tpl.html
@@ -11,9 +11,9 @@
 
     <nav class="tabs-container">
       <ul class="tabs tabs-3 unstyled-list">
-        <li class="tab"><a href="/users/{{id}}/visions" data-noscroll>{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</a></li>
-        <li class="tab"><a href="/users/{{id}}/supported" data-noscroll>{{ supported.length}} {{pluralize supported.length 'Support' 'Supports'}}</a></li>
-        <li class="tab"><a href="/users/{{id}}/replies" data-noscroll>{{ replies.length }} {{pluralize replies.length 'Reply' 'Replies'}}</a></li>
+        <li class="tab"><a href="/users/{{id}}/visions" data-noscroll data-replace>{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</a></li>
+        <li class="tab"><a href="/users/{{id}}/supported" data-noscroll data-replace>{{ supported.length}} {{pluralize supported.length 'Support' 'Supports'}}</a></li>
+        <li class="tab"><a href="/users/{{id}}/replies" data-noscroll data-replace>{{ replies.length }} {{pluralize replies.length 'Reply' 'Replies'}}</a></li>
       </ul>
     </nav>
 
