--- a/src/visionlouisville/jstemplates/user-list-item-tpl.html
+++ b/src/visionlouisville/jstemplates/user-list-item-tpl.html
@@ -1,16 +1,18 @@
 <article class="user user-card clearfix">
 
   <a href="/users/{{ id }}" class="user-link"><img class="avatar" src="{{ avatar_url }}" alt="{{ full_name }}" title="{{ full_name }}"></a>
-  <span  class="author">
-    <strong class="author-name">{{ full_name }}</strong>
-    <a class="twitter-handle" href="http://twitter.com/{{ username }}" target="_blank">@{{ username }}</a>
-  </span>
-  <span class="user-meta">
-    <span class="user-vision-count nobreak">{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</span>
-    <span class="meta-sep">|</span>
-    <span class="user-support-count nobreak">{{ supported.length}} {{pluralize supported.length 'Support' 'Supports'}}</span>
-    <span class="meta-sep">|</span>
-    <span class="user-reply-count nobreak">{{ replies.length }} {{pluralize replies.length 'Reply' 'Replies'}}</span>
-  </span>
+  <a href="/users/{{ id }}" class="block-link undecorated">
+    <span  class="author">
+      <strong class="author-name">{{ full_name }}</strong>
+      <span class="twitter-handle">@{{ username }}</span>
+    </span>
+    <span class="user-meta">
+      <span class="user-vision-count nobreak">{{ visions.length }} {{pluralize visions.length 'Vision' 'Visions'}}</span>
+      <span class="meta-sep">|</span>
+      <span class="user-support-count nobreak">{{ supported.length}} {{pluralize supported.length 'Support' 'Supports'}}</span>
+      <span class="meta-sep">|</span>
+      <span class="user-reply-count nobreak">{{ replies.length }} {{pluralize replies.length 'Reply' 'Replies'}}</span>
+    </span>
+  </a>
 
 </article>
