User's name on visions should link to user profile

--- a/src/visionlouisville/jstemplates/item-tpl.html
+++ b/src/visionlouisville/jstemplates/item-tpl.html
@@ -16,7 +16,7 @@
 
       <span class="author">
         <strong class="author-name">
-          <a href="/visions/{{ author_details.id }}" class="undecorated">{{ author_details.full_name }}</a>
+          <a href="/users/{{ author_details.id }}" class="undecorated">{{ author_details.full_name }}</a>
         </strong>
         <em class="twitter-handle">@{{ author_details.username }}</em>
       </span>
